--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -1,14 +1,29 @@
-<p>
-	<a href="{% url 'polls:home' %}">Welcome To Poll Website</a>
-	{% if user.is_superuser or user.is_staff %}
-		<a href="{% url 'polls:question_create' %}" title="">Create Question</a>
-    {% else %}
-		Hello, {{ user.username }}
-	    <a href="{% url 'polls:logout' %}" title="">log out</a>
-    	<a href="{% url 'polls:register' %}" title="">register</a>
-    	<a href="{% url 'polls:login' %}" title="">log in</a>
-	{% endif %}    
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+	<!-- HTMX -->
+	<script src="https://unpkg.com/htmx.org@1.9.12"></script>
+</head>
+<body>
+	<p>
+		<a href="{% url 'polls:home' %}">Welcome To Poll Website</a>
+		{% if user.is_superuser or user.is_staff %}
+			<a href="{% url 'polls:question_create' %}" title="">Create Question</a>
+		{% else %}
+			Hello, {{ user.username }}
+			<a href="{% url 'polls:logout' %}" title="">log out</a>
+			<a href="{% url 'polls:register' %}" title="">register</a>
+			<a href="{% url 'polls:login' %}" title="">log in</a>
+		{% endif %}    
+	</p>
+	
+</body>
+</html>
 
 
 {% include "polls/messages_display.html" %}
